<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kfj_ros2_demo_service_server</name>
  <version>0.0.1</version>
  <description>ROS2 demo service server for adding two integers.</description>
  <maintainer email="csukuangfj@gmail.com">Fangjun Kuang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>kfj_ros2_demo_service_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>kfj_ros2_demo_service_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

